Fixed localStorage persistence and added Clear All Data button

--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
             </p>
             <p>📖 Subject types and credits are fully customizable in the settings above</p>
             <p>📅 Each year contains 2 semesters for easy organization</p>
+            <p style="margin-top: 1rem;">
+                <button id="clearDataBtn" class="btn btn-outline" style="font-size: 0.85rem; padding: 0.5rem 1rem;">
+                    <span class="btn-icon">🗑️</span>
+                    Clear All Data
+                </button>
+            </p>
         </footer>
     </div>
 
